# Clean-Slate

./: .gitignore  BUILD_LINUX.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release-windows.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/engine/: browser.rs  exclusions.rs  mod.rs  network.rs  os.rs  os_specific.rs  system.rs  validator.rs
src-tauri/src/logger/: mod.rs  secure_log.rs
src/components/: Dashboard.tsx  LogViewer.tsx  ProgressView.tsx  Settings.tsx
src/hooks/: useCleanup.ts
src/types/: ipc.ts
